Added subscription modify link

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -112,10 +112,10 @@
 										</div>
 									</div>  
 								</fieldset>
-								<form method="post" action="/subscribeEditorModification">
-									<input type="submit" class="btn btn-primary" name="submitBtn" value="Modifier ma demande">
-									<input type="hidden" id="regitrationId" name="registrationId" th:value="${registration.id}">
-								</form>								
+								<form class="row justify-content-end mt-2"  method="post" action="/subscribeEditorModification">
+									<input type="submit" class="col-4 col-lg-2 btn btn-primary mr-4" name="submitBtn" value="Modifier ma demande">
+									<input type="hidden" id="regitration" th:name="registrationId" th:value="${registration.id}">
+								</form>							
 							</div>
 						</div>
 					</div>
