fix css button modifier mon inscription

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -112,8 +112,8 @@
 										</div>
 									</div>  
 								</fieldset>
-								<form class="row justify-content-end mt-2"  method="post" action="/subscribeEditorModification">
-									<input type="submit" class="col-4 col-lg-2 btn btn-primary mr-4" name="submitBtn" value="Modifier ma demande">
+								<form class="d-flex justify-content-end"  method="post" action="/subscribeEditorModification">
+									<button type="submit" class="col-10 col-lg-2 btn btn-primary" name="submitBtn">Modifier ma demande</button>
 									<input type="hidden" id="regitration" th:name="registrationId" th:value="${registration.id}">
 								</form>							
 							</div>
