messages d'erreur sur formulaire fonctionnels

--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -222,6 +222,12 @@
 	display: none;
 }
 
+.table_error {
+    color: var(--danger);
+    font-size: 0.9em;
+    font-style: italic;
+}
+
 @media screen and (max-width: 1407px) {
     .registrationState {
     	width: 80%;
