--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -17,6 +17,71 @@
 	<body>
 	    <header th:replace="navBar.html :: top"></header>
 	    <main>
+	    	<section>
+	    		<div class="container containerTitleStyle">
+					<h2 class="col-sm-12 p-0 title">Informations générales:</h2>
+				</div>
+                    <form method="post" action="/submitRegistration">
+		                        <input type="hidden" name="eventId" th:value="${registration.id}">
+		                        <input type="hidden" id="pricePerTable" name="pricePerTable" th:value="${registration.event?.pricePerTable}" disabled>
+		                        <input type="hidden" id="saleOptionPrice" name="saleOptionPrice" th:value="${registration.event?.saleOptionPrice}" disabled>
+		                        <input type="hidden" id="userId" name="userId" th:value="${connectedUser.id}">
+		                        <fieldset id="state_1" class="registrationState">
+                                 <div class="col-sm-10">
+                                     <label for="tablesQuantity" th:text="|Nombre de tables souhaitées (${registration.event?.maxTablesPerEditor} max.) :|">Nombre de tables souhaitées :</label>
+                                 </div>
+                                 <div class="col-lg-1 p-lg-0 m-auto">
+                                     <input type="number" id="tablesQuantity" name="tablesQuantity" value="0">
+                                 </div>
+                                 <div class="col-sm-10">
+                                     <label for="electricalSupplyNeed">Besoin d'un raccord au réseau éléctrique :</label>
+                                 </div>
+                                 <div class="m-auto">
+                                     <label class="switch">
+                                         <input type="checkbox" id="electricalSupplyNeed" name="electricalSupplyNeed">
+                                         <span class="slider round"></span>
+                                         <div class="switch_on">OUI</div>
+                                            <div class="switch_off">NON</div>
+                                     </label>
+                                 </div>
+                                 <h3>Option vente</h3>
+                                  <div class="col-sm-10">
+                                      <label for="saleOption">Souhaitez-vous vendre des produits lors de l'évènement ?</label>
+                                  </div>
+                                  <div class="m-auto">
+                                      <label class="switch">
+                                          <input type="checkbox" id="saleOption" class="saleOption" name="saleOption">
+                                          <span class="slider round"></span>
+                                             <div class="switch_on">OUI</div>
+                                             <div class="switch_off">NON</div>
+                                      </label>
+                                  </div>
+  	                              <div id="costPreview" class="registration_cost text-center mt-4">Prévisualisation du coût de l'inscription : <span class="registrationCost">0</span> €</div>
+                                  <h3>Bénévoles</h3>
+                                  <div class="volunteer col-sm-10">
+	                                  <div class="m-auto">
+		                                  <label class="switch">
+			                                  <input type="checkbox" id="volunteer" name="volunteersNeed">
+		                                      <span class="slider round"></span>
+		                                      <div class="switch_on">OUI</div>
+	                                          <div class="switch_off">NON</div>
+		                                   </label>
+		                              </div>
+		                          </div>
+  	                              <h3 class="fs-title">Informations complémentaires</h2>
+                                  <div>
+			                          <label for="comments" class="w-100 text-left pt-3">Ajouter un commentaire</label>
+		    	                      <textarea id="comments" class="comments" name="comments"></textarea>
+		                          </div>
+		                          <div>
+		                              <label id="finalCost" for="cost" class="registration_cost w-100 text-center mt-4">Coût de l'inscription : 65 euros</label>
+		                              <input type="hidden" id="cost" name="registrationCost" value="65" />
+		                          </div>
+		                          <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
+		                          <button type="submit" name="registration" class="next action-button">Valider</button>
+	                   </form>
+
+	    	</section>
 	    	<hr />
 	    	<section id="agents">
 	    		<div class="container containerTitleStyle">
