--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -20,45 +20,47 @@
 	    	<hr />
 	    	<section id="agents">
 	    		<div class="container containerTitleStyle">
-					<h2 class="col-sm-12 p-0 title">Mes collaborateurs présents à l'évenement:</h2>
-				</div>
-				<div class="container">
-			    	<div class="row justify-content-center">
-						<table class="table table-striped table-bordered col-12">
-						  <thead>
-						    <tr>
-						      <th scope="col">Nom</th>
-						      <th scope="col">Prénom</th>
-						      <th scope="col">Numéro</th>
-						      <th scope="col">Mail</th>
-						    </tr>
-						  </thead>
-						  <tbody>
-						    <tr>
-						      <td>Mark</td>
-						      <td>Otto</td>
-						      <td>0606060606</td>
-						      <td>@mdo</td>
-						    </tr>
-						    <tr>
-						      <td>Jacob</td>
-						      <td>Thornton</td>
-						      <td>0606060606</td>
-						      <td>@fat</td>
-						    </tr>
-						    <tr>
-						      <td>Larry</td>
-						      <td>the Bird</td>
-						      <td>0606060606</td>
-						      <td>@twitter</td>
-						    </tr>
-						      <td colspan="4" class="text-center font-weight-bold">Ajouter un collaborateur<br />
-						      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14 svgAddAgent" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"></path></svg>
-						      </td>
-						    </tr>
-						  </tbody>
-						</table>
-				</div>
+						<h2 class="col-sm-12 p-0 title">Mes collaborateurs présents à l'évenement:</h2>
+					</div>
+					<div class="container">
+							<div class="row justify-content-center">
+								<table class="table table-striped table-bordered col-12">
+									<thead>
+										<tr>
+											<th scope="col">Nom</th>
+											<th scope="col">Prénom</th>
+											<th scope="col">Numéro</th>
+											<th scope="col">Mail</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Mark</td>
+											<td>Otto</td>
+											<td>0606060606</td>
+											<td>@mdo</td>
+										</tr>
+										<tr>
+											<td>Jacob</td>
+											<td>Thornton</td>
+											<td>0606060606</td>
+											<td>@fat</td>
+										</tr>
+										<tr>
+											<td>Larry</td>
+											<td>the Bird</td>
+											<td>0606060606</td>
+											<td>@twitter</td>
+										</tr>
+										<tr>
+											<td colspan="4" class="text-center font-weight-bold">Ajouter un collaborateur<br />
+											<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14 svgAddAgent" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"></path></svg>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</div>
 	    	</section>
 	    	<hr />
 	    	<section id="Games">
@@ -67,18 +69,23 @@
 				</div>
 				<div class="container">
 			    	<div class="row justify-content-center">
-						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="item : ${new int[18]}">
+						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="gamesRegistration : ${gamesRegistration}">
 							<div class="img-container">
-								<img class="card-img-top card-img-custom" src="https://picsum.photos/200/300" alt="Card image cap">
+								<img class="card-img-top card-img-custom" th:src="${gamesRegistration.picture}" alt="Card image cap">
 							</div>
 							<div class="card-body card-body-custom">
-						    	<p class="card-text card-text-custom">Shadow of the darkness</p>
+						    	<p class="card-text card-text-custom" th:text="${gamesRegistration.name}">Shadow of the darkness</p>
 								<div class="d-flex svgContainer justify-content-around p-2">
-									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16 deleteUpdateSVG deleteSVG" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
+									<form method="POST" action="/deleteRegistrationGame" class="deleteUpdateSVG">
+										<input type="hidden" name="registrationId" th:value="${registration.id}">
+										<input type="hidden" name="gamesRegistrationId" th:value="${gamesRegistration}">
+										<button  type="submit">
+											<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
+										</button>
+									</form>
 									<svg aria-hidden="true" focusable="false" data-toggle="modal" data-target="#form" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16 deleteUpdateSVG" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg>
 								</div>
 							</div>
-
 						</div>
 						<!-- card add -->
 						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" data-toggle="modal" data-target="#formCreate">
@@ -86,7 +93,7 @@
 							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle" class="svg-inline--fa fa-plus-circle fa-w-16 card-img-top card-img-custom" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>
 							</div>
 							<div class="card-body card-body-custom">
-						    	<p class="card-text">Add a game</p>
+						    	<p class="card-text">Ajouter un jeux</p>
 							</div>
 						</div>
 					</div>
