--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -1,7 +1,7 @@
 <header th:fragment="top">
   <!-- Fixed navbar -->
   <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
-    <a class="nav-link p-0" href="home.html">
+    <a class="nav-link p-0" href="/accueil_editeur">
       <img src="../pictures/logo_transparent2.png" class="rounded-circle z-depth-0" alt="Logo Orléans Joue" height="70">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
