--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -43,14 +43,14 @@
 	                        <input type="hidden" id="userId" name="userId" th:value="${connectedUser.id}">
 	                        <fieldset id="state_1" class="registrationState">
 	                            <div class="quitIcon">
-	                                <a href="#" title="Annuler l'inscripition à l'évènement" onclick="confirmation();">
+	                                <a href="#" title="Annuler l'inscription à l'évènement" onclick="confirmation();">
 	                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 	                                        <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path>
 	                                    </svg>
 	                                </a>
 	                            </div>
 	                            <h2 class="fs-title">Informations générales</h2>
-	                            <h3 class="fs-subtitle">Orléans Joue 2020</h3>
+	                            <h3 class="fs-subtitle subscribeForm" th:text="${event.name}"></h3>
 	                            <fieldset class="border p-3 text-left">
 	                                <legend>Besoins matériel</legend>
 	                                <div class="row align-items-center">
@@ -104,7 +104,7 @@
 	                                </a>
 	                            </div>
 	                            <h2 class="fs-title">Moyens <br/>Humains</h2>
-	                            <h3 class="fs-subtitle">Orléans Joue 2020</h3>
+	                            <h3 class="fs-subtitle subscribeForm" th:text="${event.name}"></h3>
 	                            <fieldset class="border p-3 text-left">
 	                                <legend>Représentants</legend>
 	                                <div class="row align-items-center">
@@ -149,7 +149,7 @@
 	                                </a>
 	                            </div>
 	                            <h2 class="fs-title">Informations complémentaires</h2>
-	                            <h3 class="fs-subtitle">Orléans Joue 2020</h3>
+	                            <h3 class="fs-subtitle subscribeForm" th:text="${event.name}"></h3>
 	                            <div>
 	                                <label for="comments" class="w-100 text-left pt-3">Ajouter un commentaire</label>
 	                                <textarea id="comments" class="comments" name="comments"></textarea>
