Added event subscribe message + css fix

--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -17,7 +17,7 @@
     padding: 0;
 }
 
-@media (max-width: 544px) {  
+@media (max-width: 768px) {  
   * {
   	font-size:0.8rem;
   } 
@@ -295,5 +295,9 @@ input:checked ~ .switch_on {
 
 .stateBadge {
 	font-size: 1.2rem;
+}
+
+.eventSubscribeMsg {
+	color: var(--purple);
 }
 
